# ESP32-LED

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bulk  makering.c  sdkconfig.defaults  settings.def
Manuals/: Drop.md  Overview.md  Stargate.md
PCB/: .gitignore  Coaster2.scad  Coaster2Base.scad  Coaster2Top.scad  Makefile  README.md  grid.c  placeleds.c
PCB/150x7/: 150x7.kicad_pcb  150x7.kicad_prl  150x7.kicad_sch
PCB/30x9/: 30x9.kicad_pcb  30x9.kicad_prl  30x9.kicad_pro  30x9.kicad_sch  README.md
PCB/5x7/: 5x7.kicad_pcb  5x7.kicad_prl  5x7.kicad_pro  5x7.kicad_sch  Coaster.kicad_pcb  Coaster.kicad_pro  Coaster.kicad_sch  README.md
PCB/5x9/: 5x9.kicad_pcb  5x9.kicad_prl  5x9.kicad_pro  5x9.kicad_sch  README.md
PCB/Clock/: Clock.kicad_pcb  Clock.kicad_prl  Clock.kicad_pro  Clock.kicad_sch  README.md
PCB/Coaster/: Coaster.kicad_pcb  Coaster.kicad_prl  Coaster.kicad_pro  Coaster.kicad_sch  README.md
PCB/Coaster2/: Coaster.kicad_pcb  Coaster.kicad_prl  Coaster.kicad_pro  Coaster.kicad_sch  Coaster.scad  README.md  Spacer.kicad_pcb  Spacer.kicad_prl  (+1 more)
main/: CMakeLists.txt  Gate.c  LED.c  app.h  app_priv.h  apps.h  audio.c  bargraph.c  chars.h  clock.c  clockface.c  control.h  countdown.c  cylon.c  drop.c  endtest.c  fft.c  fft.h  idf_component.yml  idle.c  lava.c  matter_main.cpp  neenaw.c  palette.c  palette.h  palette.m  pulse.c  rainbow.c  random.c  settings.c  settings.def  settings.h  spin.c  stargate.c  test.c  text.c  twinkle.c  volume.c  volumergb.c
release/: LED-S3-MINI-N4-R2-manifest.json  LEDC12-WLED-manifest.json  LEDC12-manifest.json  LEDX12-WLED-manifest.json  LEDX12-manifest.json
(+232 files in other folders)
